Fix: Fix and correct issue with the welcome header not fiting tthesame width with other sections

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,6 +11,7 @@
 
     @media @mobile {
       border-bottom: 1.3px dashed @navigation-border;
+        width: 100%;
     }
   }
 
